2008-03-26  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.
        
        Moved a few files around in the XCode project.

        * JavaScriptCore.xcodeproj/project.pbxproj:

2008-03-26  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.
        
        Made closures work.
        
        An activation object aliases to the register file until its associated
        function returns, at which point it copies the registers for locals and
        parameters into an independent storage buffer.

2008-03-24  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.
        
        Fixed recent 25% regression on simple for loop test. GCC seems to be
        very finicky about the code that gets inlined into
        Machine::privateExecute.

        Everything in this patch is simply the result of experiment.
        
        The resolve and resolve_base opcodes do not seem to have gotten slower
        from this change.

        * VM/Machine.cpp:
        (KJS::resolve):
        (KJS::resolveBase):
        (KJS::Machine::privateExecute):
        * kjs/nodes.h:

2008-03-24  Oliver Hunt  <oliver@apple.com>

        Reviewed by Geoff Garen.

        Bug 18059: squirrelfish needs to compile on platforms without computed goto
        <http://bugs.webkit.org/show_bug.cgi?id=18059>

        "Standard" macro style support for conditionalising the use of computed goto.

        * JavaScriptCore.xcodeproj/project.pbxproj:
        * VM/Machine.cpp:
        (KJS::Machine::isOpcode):
        (KJS::Machine::privateExecute):
        * VM/Machine.h:
        (KJS::Machine::getOpcode):
        (KJS::Machine::getOpcodeID):
        * VM/Opcode.h:
        * wtf/Platform.h:

2008-03-24  Geoffrey Garen  <ggaren@apple.com>

        Moved my notes from nodes.h to the wiki.

        * kjs/nodes.h:

2008-03-24  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by NOBODY.
        
        SquirrelFish lives.
        